--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -338,7 +338,7 @@
           event.preventDefault();
           // Check event type
           const type = $("#id_virtual_event_type").val();
-          // Get other fields
+          // Get other fields in the meeting/webinar flow
           const timezone = $("#id_webinar_timezone").val();
           const duration = $("#id_webinar_duration").val();
           const agenda = $("#id_event_public_description").val();
