Update email accounts + region list

--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -71,6 +71,8 @@
         const validZoomAccounts = [
           'webinars@350.org',
           'zoom@350.org',
+          'web@350.org',
+          'oc-tools@350.org',
           '350africa@350.org',
           'europe-admin@350.org'
         ];
@@ -223,7 +225,8 @@
           }
         ];
 
-        const regionList = ["Asia", "Africa", "Europe", "Latin America", "Global"];
+        const regionList = ["Asia", "Africa", "Europe", "Latin America", "Global", "North America", "Australasia", 
+        "Pacific"];
         const virtualEventList = ["Webinar", "Meeting"];
 
 
