Add in correct custom page field

--- a/event_create.html
+++ b/event_create.html
@@ -313,7 +313,7 @@
           {% endif %}
         </p>
 
-        {% if page.custom_fields.event_webinar == 'Yes' and not update %}
+        {% if page.custom_fields.events_webinar == 'Yes' and not update %}
         {% include "./zoom_webinar_create.html" %}
         {% endif%}
 
