--- a/date_picker.html
+++ b/date_picker.html
@@ -12,7 +12,7 @@
     {% else %}
 	<div class="input-text input-date input-date-{{ date_field.name }}">
     <label for="id_{{ date_field.name }}_date">{% filter ak_text:"field_event_starts_at_date"|capfirst %}Date{% endfilter %}</label>
-    <input type="text" size=10 name="{{ date_field.name }}_date" class="date text" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date" placeholder="MM/DD/YYYY"/>
+    <input type="text" size=10 name="{{ date_field.name }}_date" class="date text datepicker" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date" placeholder="MM/DD/YYYY"/>
 	</div>
     {% endif %}
   {% else %}
@@ -29,9 +29,9 @@
   {% else %}
 	<div class="input-text input-time input-time-{{ date_field.name }}">
     <label for="id_{{ date_field.name }}_time">{% filter ak_text:"field_event_starts_at_time"|capfirst %}Start Time (When people should show up in your local time, e.g. 2:00, 7:30){% endfilter %}</label>
-    <input type="text" size=8 name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="{{ date_field.default_time }}" class="time text" format="time" />
+    <input type="text" size=8 name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="{{ date_field.default_time }}" class="time text timepicker" format="time" />
 	</div>
-  <div class="input-select input-ampm input-ampm-{{ date_field.name }}">
+   <div class="input-select input-ampm input-ampm-{{ date_field.name }}">
     <label for="id_{{ date_field.name }}_ampm">{% filter ak_text:"general_am_pm" %}AM/PM{% endfilter %}</label>
     <select class="ampm" name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
   		<option {% ifequal date_field.default_ampm 'AM' %}selected{% endifequal %} value="AM">{% filter ak_text:"general_am" %}AM{% endfilter %}</option>
@@ -43,3 +43,10 @@
   <input type="hidden" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="{{ date_field.default_time }}" />
 {% endif %}
 </div>
+{% if date_field.name %}
+<script>
+  $( function() {
+    $( "#id_event_starts_at_date" ).datepicker();
+  } );
+</script>
+{% endif %}
