Add toni and dians email

--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -75,7 +75,8 @@
           'oc-tools@350.org',
           '350africa@350.org',
           'europe-admin@350.org',
-          'toni@350.org'
+          'toni@350.org',
+          'dian.paramita@350.org'
         ];
 
         const isEmailPaidAccount = (email) => {
