--- a/thanks.html
+++ b/thanks.html
@@ -104,7 +104,7 @@
 		<div id="thanks-message" class="bg-dkgray-trans text-large3 c10 ct10 cm10 box box-huge margin-bottom-large">
 		{% include_tmpl form.thank_you_text %}
 		
-		{% if page.custom_fields.thank_you_page_show_upsell == 'Y' and not action.orderrecurring %}
+		{% if page.custom_fields.thank_you_page_show_upsell == 'Y' and not action.orderrecurring and not user.orderrecurring_set.active %}
 			<script>
 				$(function() {
 					function urlParam(name){
