hide page from language picker based on custom field

--- a/language_picker.html
+++ b/language_picker.html
@@ -4,11 +4,13 @@
 	<div class="section-inner">
 		<ul class="menu">
 	{% for translated_page in translations %}
-		{% ifequal translated_page.id page.id %}
-			<li class="language-nav-item-{{ translated_page.name }}"><a class="disabled lang" lang="{{ translated_page.lang.iso_code }}">{{ translated_page.lang.name|default:"English" }}</a></li>
-		{% else %}
-			<li class="language-nav-item-{{ translated_page.name }}"><a class="lang lang-{{ translated_page.lang.iso_code }}" lang="{{ translated_page.lang.iso_code }}" href="/act/{{ translated_page.name }}/">{{ translated_page.lang.name|default:"English" }}</a></li>
-		{% endifequal %}
+		{% if translated_page.custom_fields.hide_from_language_picker != "Y" %}
+			{% ifequal translated_page.id page.id %}
+				<li class="language-nav-item-{{ translated_page.name }}"><a class="disabled lang" lang="{{ translated_page.lang.iso_code }}">{{ translated_page.lang.name|default:"English" }}</a></li>
+			{% else %}
+				<li class="language-nav-item-{{ translated_page.name }}"><a class="lang lang-{{ translated_page.lang.iso_code }}" lang="{{ translated_page.lang.iso_code }}" href="/act/{{ translated_page.name }}/">{{ translated_page.lang.name|default:"English" }}</a></li>
+			{% endifequal %}
+		{% endif %}
 	{% endfor %}
 		</ul>
 	</div>
